fix: 修正了一些内容以及调整了文档